--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
 		"isotope-layout": "^3.0.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"simplebar": "latest"
+		"simplebar": "latest",
+		"wnumb": "^1.2.0"
 	}
 }
